--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "react-dom": "^18",
     "react-icons": "^5.3.0"
   },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+  },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
