--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.7.0",
     "@prisma/client": "^5.20.0",
     "axios": "^1.7.7",
     "next": "14.2.13",
